feat: Google sheet file picker on blank page (#22148)
## Description

This PR adds:
- Google sheet file picker needs to be shown on blank page
- Refactored file picker code into a separate component called
GoogleSheetFilePicker


**How to test:**
For selected sheets scope, once authorisation is complete, user would be
taken to file picker page, with blank background as per
[designs](https://www.figma.com/file/TcFhqEbAc8ymHTRF5wR1qv/Limited-GSheet-Access?node-id=506-32532&t=0skI0T6o9VJhJhTT-0)

> Add a TL;DR when description is extra long (helps content team)

Fixes #21065 


Media
> A video or a GIF is preferred. when using Loom, don’t embed because it
looks like it’s a GIF. instead, just link to the video


## Type of change

- New feature (non-breaking change which adds functionality)


## How Has This Been Tested?

- Manual

### Test Plan
> Add Testsmith test cases links that relate to this PR

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)


## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
- [ ] New and existing unit tests pass locally with my changes
- [x] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

----

--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -20,6 +20,11 @@ body.dragging * {
   cursor: grabbing !important;
 }
 
+body.overlay {
+  opacity: 0;
+  pointer-events: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
