updated body text color

--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -18,6 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fff !important;
+  color: var(--ads-v2-color-fg);
 }
 
 body.dragging * {
