--- a/deploy/docker/templates/appsmith_starting.html
+++ b/deploy/docker/templates/appsmith_starting.html
@@ -17,7 +17,7 @@
       <p class="bold-text">
         Appsmith is Starting.
       </p>
-      <p>Please wait until Appsmith is ready. This should take less than a minute.</p>
+      <p>Please wait until Appsmith is ready. This should about a minute.</p>
       <div class="loader"></div>
     </div>
 
