--- a/deploy/docker/templates/appsmith_initializing.html
+++ b/deploy/docker/templates/appsmith_initializing.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main">
       <p class="bold-text">
-        Please Wait 
+        Please wait 
       </p>
       <p>Appsmith is initializing. This might take a few minutes.</p>
       <div class="loader"></div>
