--- a/deploy/docker/templates/appsmith_starting.html
+++ b/deploy/docker/templates/appsmith_starting.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main">
       <p class="bold-text">
-        Appsmith is Starting.
+        Appsmith is starting.
       </p>
       <p>Please wait until Appsmith is ready. This process usually takes a minute. </p>
       <div class="loader"></div>
