--- a/deploy/docker/templates/appsmith_initializing.html
+++ b/deploy/docker/templates/appsmith_initializing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" http-equiv="refresh" content="5"/>
     <link
       rel="shortcut icon"
-      href="https://res.cloudinary.com/dwpfockn8/image/upload/v1597920848/favicons/favicon-orange_pxfmdc.ico"
+      href="https://assets.appsmith.com/appsmith-favicon-orange.ico"
     />
     <meta
       name="viewport"
