fix: design & QA issue fixes (#22693)
> Pull Request Template
>
> Use this template to quickly create a well written pull request.
Delete all quotes before creating the pull request.

## Description

> Please include a summary of the changes and which issue has been
fixed. Please also include relevant motivation
> and context. List any dependencies that are required for this change
> Links to Notion, Figma or any other documents that might be relevant
to the PR

> Add a TL;DR when description is extra long (helps content team)

Fixes # (issue)
> if no issue exists, please create an issue and ask the maintainers
about this first


Media
> A video or a GIF is preferred. when using Loom, don’t embed because it
looks like it’s a GIF. instead, just link to the video


## Type of change

> Please delete options that are not relevant.

- Bug fix (non-breaking change which fixes an issue)
- New feature (non-breaking change which adds functionality)
- Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- Chore (housekeeping or task changes that don't impact user perception)
- This change requires a documentation update


## How Has This Been Tested?
> Please describe the tests that you ran to verify your changes. Provide
instructions, so we can reproduce.
> Please also list any relevant details for your test configuration.
> Delete anything that is not important

- Manual
- Jest
- Cypress

### Test Plan
> Add Testsmith test cases links that relate to this PR

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)


## Checklist:
### Dev activity
- [ ] My code follows the style guidelines of this project
- [ ] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the do

--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -138,3 +138,19 @@ div.bp3-popover-arrow {
 .bp3-overlay-zindex {
   z-index: 20 !important;
 }
+.error-menuitem {
+  color: var(--ads-v2-color-fg-error) !important;
+}
+.error-menuitem > .ads-v2-menu__menu-item-children {
+  color: var(--ads-v2-color-fg-error) !important;
+}
+.error-menuitem:hover {
+  background-color: var(--ads-v2-color-red-50) !important;
+}
+.error-menuitem:active {
+  background-color: var(--ads-v2-color-red-100) !important;
+}
+.menuitem-nohover:hover {
+  background-color: transparent !important;
+  cursor: default !important;
+}
