--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -37,6 +37,10 @@ code {
     monospace;
 }
 
+* {
+  outline: none !important;
+}
+
 div.bp3-select-popover .bp3-popover-content {
   padding: 0;
 }
