chore: Updating the UI for scrollbars all over the product to use the same color and width (#23023)
## Description

Updating the UI for scrollbars all over the product to use the same
color and width

Fixes [#19340](https://github.com/appsmithorg/appsmith/issues/19340)

Media:
https://cjrc9tc9nt.vmaker.com/record/0Wabub8xKvzaL2Ac

## Type of change
- Chore (housekeeping or task changes that don't impact user perception)


## How Has This Been Tested?
- Manual

## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

---------

Co-authored-by: Rohit Agarwal <rohit_agarwal@live.in>

--- a/app/client/src/assets/styles/index.css
+++ b/app/client/src/assets/styles/index.css
@@ -27,7 +27,7 @@ html {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: rgba(209, 213, 219, var(--tw-bg-opacity)) white;
+  scrollbar-color: var(--ads-v2-color-bg-emphasis) var(--ads-v2-color-bg);
 }
 
 /* For some reason, margin-left: -160px; is being added to the react-toastify stylesheet on the .Toastify__toast-container--top-center
@@ -38,20 +38,22 @@ and .Toastify__toast-container--bottom-center classes, which messes with the pla
 }
 
 ::-webkit-scrollbar {
-  height: 6px;
-  width: 6px;
+  height: 5px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-white;
+  background-color: var(--ads-v2-color-bg);
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-transparent;
+  background-color: transparent;
 }
 
 :hover::-webkit-scrollbar-thumb {
-  @apply bg-gray-300;
+  background-color: var(--ads-v2-color-bg-emphasis);
+  border-radius: 36px;
+  opacity: 0.5;
 }
 
 .diagnol-cross {
