fix: property pane callouts. (#23341)
## Description
- Address property pane callouts mentioned under -
https://www.notion.so/appsmith/Property-pane-new-QA-callout-e29a25fa1644458bb88ced818743793e
- Fixes Blue highlight -
https://www.notion.so/appsmith/Disable-blue-focus-6080bab2923f4e2796af819b45882c02
- Fixes Date picker issue -
https://www.notion.so/appsmith/Datepicker-issue-3e26ad5c38564e27b4b44f19adc2d241
- Fixes change border radius issue -
https://www.notion.so/appsmith/Change-border-radius-color-in-property-pane-faa5501a08264066a637e9d2bac29c02
- Fixes Autolayout conversion modal issue -
https://www.notion.so/appsmith/Remove-close-icon-during-the-loading-state-of-conversion-flow-076d2d86c44e4977a15b1468f45de477
- Fixes Entity dropdown issue -
https://www.notion.so/appsmith/Entity-dropdown-overlap-issue-5a2c6fdf9a6a41d6b5ea0df700126c13
- Please verify this issue once, I made some changes to the file -
https://www.notion.so/appsmith/Deleting-a-single-widget-on-canvas-not-possible-using-keyboard-shortcuts-cb7c24b910c64946b31bf8ff88c36205
- One minor issue fixed -
https://www.notion.so/appsmith/Don-t-show-the-position-for-the-icon-if-no-icon-is-selected-193ea48bc61c41d5a86a5e36d0528cf2

#### PR fixes following issue(s)
Fixes # (issue number)
> if no issue exists, please create an issue and ask the maintainers
about this first
>
>
#### Media
> A video or a GIF is preferred. when using Loom, don’t embed because it
looks like it’s a GIF. instead, just link to the video
>
>
#### Type of change
> Please delete options that are not relevant.
- Bug fix (non-breaking change which fixes an issue)
- New feature (non-breaking change which adds functionality)
- Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- Chore (housekeeping or task changes that don't impact user perception)
- This change requires a documentation update
>
>
>
## Testing
>
#### How Has This Been Tested?
> Please 

--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -28,13 +28,20 @@ body.dragging * {
 }
 
 /**
-  over-riding the outline that comes from
-  blueprint. Please don't add important, we 
-  are using outline in adsv2 components.
+  Disable outline completely from all components
 */
-:focus {
-  outline: none;
-  outline-offset: 0;
+:focus,
+:focus-visible {
+  outline: none !important;
+  outline-offset: 0 !important;
+}
+
+/**
+  Disable outline for adsv2 select component
+*/
+.ads-v2-select.rc-select-focused {
+  outline: none !important;
+  outline-offset: 0 !important;
 }
 
 body.overlay {
